--- a/gb/17/6/30/n9338361.md
+++ b/gb/17/6/30/n9338361.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mvjxlk399/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mvjxlk399/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mvjxlk399/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mvjxlk399/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mvjxlk399/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mvjxlk399/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mvjxlk399/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mvjxlk399/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mvjxlk399/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mvjxlk399/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mvjxlk399/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mvjxlk399/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mvjxlk399/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mvjxlk399/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mvjxlk399/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mvjxlk399/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/mvjxlk399/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mvjxlk399/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/mvjxlk399/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mvjxlk399/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mvjxlk399/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mvjxlk399/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mvjxlk399/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mvjxlk399/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>川普新政下 无证华人纷纷回国</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/06/1504011601192700-600x450-2-600x400.jpg" />
 <h6>位于洛杉矶山谷大道上的华人电脑维修与二手买卖店家感叹顾客流失，因不少非法滞留的华人都因川普新移民政策而回中国了。(大纪元)
 </h6>
 <hr>
-	<p>【大纪元2017年06月30日讯】（大纪元记者徐绣惠<ahref="https://github.com/mvjxlk399/djy/blob/master/gb/tag/%E6%B4%9B%E6%9D%89%E7%9F%B6.md#1">洛杉矶</a>报导）为防止伊斯兰恐怖分子入境，美国总统<ahref="https://github.com/mvjxlk399/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>（特朗普）6日颁布了<ahref="https://github.com/mvjxlk399/djy/blob/master/gb/tag/%E6%96%B0%E7%89%88%E7%A7%BB%E6%B0%91%E7%A6%81%E4%BB%A4.md#1">新版移民禁令</a>，再度暂时禁止6个<ahref="https://github.com/mvjxlk399/djy/blob/master/gb/tag/%E7%A9%86%E6%96%AF%E6%9E%97%E5%9B%BD%E5%AE%B6.md#1">穆斯林国家</a>的公民进入美国。川普新令及其<ahref="https://github.com/mvjxlk399/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91%E6%94%BF%E7%AD%96.md#1">移民政策</a>也让许多华裔的非法移民开始恐慌，据悉一些隐身在足浴按摩店打工的非法移民因此决定返回中国，还有些专做华人买卖的店家生意也受影响。</p>
+	<p>【大纪元2017年06月30日讯】（大纪元记者徐绣惠<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B4%9B%E6%9D%89%E7%9F%B6.md#1">洛杉矶</a>报导）为防止伊斯兰恐怖分子入境，美国总统<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>（特朗普）6日颁布了<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%96%B0%E7%89%88%E7%A7%BB%E6%B0%91%E7%A6%81%E4%BB%A4.md#1">新版移民禁令</a>，再度暂时禁止6个<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A9%86%E6%96%AF%E6%9E%97%E5%9B%BD%E5%AE%B6.md#1">穆斯林国家</a>的公民进入美国。川普新令及其<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91%E6%94%BF%E7%AD%96.md#1">移民政策</a>也让许多华裔的非法移民开始恐慌，据悉一些隐身在足浴按摩店打工的非法移民因此决定返回中国，还有些专做华人买卖的店家生意也受影响。</p>
 <p>在阿罕布拉市从事电脑维修、贩卖的“新天地电脑”公司业主卢先生就表示，以前店门口每日都有许多人走来走去闲逛，现在少了很多。</p>
-<figure id="attachment_9338671" style="width: 450px" class="wp-caption aligncenter"><img class="size-medium wp-image-9338671" src="https://i.epochtimes.com/assets/uploads/2017/06/IMG_20170629_111630-450x338.jpg" alt="在新天地电脑公司学习使用电脑上网的华人丁女士。(徐绣惠／大纪元)" width="450" b="338" /><figcaption class="wp-caption-text">在新天地电脑公司学习使用电脑上网的华人丁女士。(徐绣惠／大纪元)</figcaption></figure>
+<figure id="attachment_9338671" aria-describedby="caption-attachment-9338671" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/06/IMG_20170629_111630-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-medium wp-image-9338671" src="https://i.epochtimes.com/assets/uploads/2017/06/IMG_20170629_111630-450x338.jpg" alt="在新天地电脑公司学习使用电脑上网的华人丁女士。(徐绣惠／大纪元)" width="450" b="338" /></a><figcaption id="caption-attachment-9338671" class="wp-caption-text">在新天地电脑公司学习使用电脑上网的华人丁女士。(徐绣惠／大纪元)</figcaption></figure>
 <h2>足疗业员工回中国</h2>
-<p>一名从事按摩行业不具名者表示，工作了一年半载，挣够了钱可以回国暂避，若需要时再来美国挣钱，她有好几名情况类似的同事也决定回中国。难道<ahref="https://github.com/mvjxlk399/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>的<ahref="https://github.com/mvjxlk399/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91%E6%94%BF%E7%AD%96.md#1">移民政策</a>也影响了足疗业者，造成员工荒？</p>
+<p>一名从事按摩行业不具名者表示，工作了一年半载，挣够了钱可以回国暂避，若需要时再来美国挣钱，她有好几名情况类似的同事也决定回中国。难道<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91%E6%94%BF%E7%AD%96.md#1">移民政策</a>也影响了足疗业者，造成员工荒？</p>
 <p>从事足疗工作六年多的理查德（Richard Lee）表示，大部分新移民刚到美国因语言问题，可选择的工作不多，很多人在国内都有一技之长，但来了美国却没办法工作，如医生执照在美国重考不仅困难且须费很多时间，他的老板本是外科医师，来了美国却经营足浴按摩，因为最容易上手的工作除了餐馆就是按摩业了。</p>
 <p>但理查德表示，近年来按摩业要求越趋严格，过去按摩师只要到学校上课就可以取得执照，但2016年前后，学生不仅要上课修学分，还得通过英文考试，新移民就不那么容易从事该职业了。</p>
 <p>理查德认为，华人区的足浴按摩店越开越多，为求竞争，每小时15美元的价位已几乎成了公定价，这种平价享受也吸引了亚裔之外的人来消费，某些非法经营的按摩店会剥削员工薪津削价竞争；因碍于身份问题，没有绿卡或合法居留身份的员工，自然也不会向店家争取权利与小费福利；非法移民没有工作权，不可能获取证照，所以这些人只能打黑工，他们在美国生存艰辛；按摩师的薪水也没有想像的多，新出台的移民政策的确可能更促使令非法居留者决定返回中国。</p>
@@ -24,42 +24,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/17/3/6/n8879569.md#1">川普颁新令 暂停对6国发签证 民主党反弹</a></li>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/17/3/8/n8887106.md#1">与美合作 伊拉克被从旅行禁令名单上移除</a></li>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/17/3/9/n8893592.md#1">华盛顿州和纽约州宣布挑战川普新版移民禁令</a></li>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/17/3/11/n8898016.md#1">美联邦法官拒绝暂停川普最新移民禁令</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/3/6/n8879569.md#1">川普颁新令 暂停对6国发签证 民主党反弹</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/3/8/n8887106.md#1">与美合作 伊拉克被从旅行禁令名单上移除</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/3/9/n8893592.md#1">华盛顿州和纽约州宣布挑战川普新版移民禁令</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/3/11/n8898016.md#1">美联邦法官拒绝暂停川普最新移民禁令</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/2/n11629364.md#1" target="_blank">139号囚犯——红色影星赵丹的凄惨人生</a></li><li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/2/n9691133.md#1" target="_blank">从上海到巴黎 前国企高管的坚守之路</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/4/n9922246.md#1" target="_blank">林辉：文革冤案中周恩来的落井下石与冷酷</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/7/4/n9355207.md#1" target="_blank">一位美国微软工程师修炼法轮功的故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/20/9/30/n12442873.md#1">《圣经》与《推背图》预言的应验与变换7</a></li>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/20/11/11/n12540543.md#1">拜登宣布当选总统 圣经专家：川普仍会胜出</a></li>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/20/11/9/n12535003.md#1">【命理】八字解盘 拜登能入主白宫吗？</a></li>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/20/10/20/n12488670.md#1">不知自己死了 一转生就能说话的张生有</a></li>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/20/10/31/n12514973.md#1">别装熟！想广结善缘 但这行为真的很讨人厌</a></li>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/20/11/11/n12542093.md#1">【有冇搞错】揭舞弊攻防战开打 共产党黑影浮现</a></li>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/20/10/19/n12487056.md#1">【思想领袖】鲁夫：批判性种族理论发动核战</a></li>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/20/11/11/n12540763.md#1">【西岸观察】抗议选举舞弊 民意汹涌挺川普</a></li>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/20/11/10/n12539892.md#1">川普赢得北卡 拿下15张选举人票</a></li>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/20/11/10/n12537579.md#1">【拍案惊奇】拜登们迫不及待 川普选情现转机</a></li>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/20/11/10/n12538429.md#1">【大选更新11.10】川普：我们将获胜！</a></li>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/20/11/9/n12537223.md#1">空姐爆刘德华浪漫事 登上飞机便看朱丽倩照片</a></li>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/20/11/10/n12537504.md#1">掌镜拍汪峰与网友合照 章子怡获赞无明星架子</a></li>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/20/11/11/n12540193.md#1">剧组聚会唐嫣包揽埋单 佘诗曼爆理由超搞笑</a></li>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/20/11/10/n12539867.md#1">年迈母亲送医急救 台湾女婿林利在脸书集气</a></li>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/20/11/10/n12538157.md#1">歌手许富凯出道十年自立门户 升格当老板</a></li>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/20/11/11/n12540543.md#1">拜登宣布当选总统 圣经专家：川普仍会胜出</a></li>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/20/11/8/n12534067.md#1">经典蓝配鲜艳黄裙 这款富豪式穿搭太抢眼了</a></li>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/20/10/31/n12514973.md#1">别装熟！想广结善缘 但这行为真的很讨人厌</a></li>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/20/11/9/n12536763.md#1">冬天强肾不怕冷 3招进补 素食者也能做</a></li>
-<li><a href="https://github.com/mvjxlk399/djy/blob/master/gb/20/11/9/n12536429.md#1">注意！吃降血压药等14种药物 不宜喝咖啡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679601.md#1">【新闻看点】上海封控混乱 传阳性病例不通报</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mvjxlk399/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mvjxlk399/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/6/30/n9338361.htm">川普新政下 无证华人纷纷回国</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/6/30/n9338361.htm">川普新政下 无证华人纷纷回国</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mvjxlk399/djy/blob/master/gb/17/6/30/n9338361.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mvjxlk399/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mvjxlk399/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mvjxlk399/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mvjxlk399/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mvjxlk399/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mvjxlk399/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mvjxlk399/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mvjxlk399/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mvjxlk399/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mvjxlk399/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mvjxlk399/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mvjxlk399/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mvjxlk399/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mvjxlk399/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mvjxlk399/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mvjxlk399/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mvjxlk399/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mvjxlk399/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mvjxlk399/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mvjxlk399/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mvjxlk399/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mvjxlk399/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mvjxlk399/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mvjxlk399/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvjxlk399/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/17/6/30/n9338361.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
